Navbar Z-Index Issue Fixed
Navbar was going under other elements due the z-index value not being stated, fixed the problem.

--- a/reactapp/src/common/Navbar/Styles.scss
+++ b/reactapp/src/common/Navbar/Styles.scss
@@ -1,4 +1,5 @@
 .navbar {
+	z-index: 1000000;
 	width: 100%;
 	background-color: white;
 	height: 80px;
